# AudioKeep

./: .gitignore  LICENSE  README.md  build.py  pyproject.toml
audiokeep/: __init__.py  app.py  main.py
audiokeep/audio/: devices.py  engine.py  signal.py
audiokeep/config/: models.py  store.py
audiokeep/system/: autostart.py  logging_setup.py  paths.py  single_instance.py
audiokeep/ui/: settings_window.py  tray.py
audiokeep/utils/: thread_safe.py
tests/: test_autostart.py  test_config.py  test_signal.py
